<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_Inicio" />
        <item
            android:id="@+id/nav_dptos"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_Dptos" />
        <item
            android:id="@+id/nav_aulas"
            android:icon="@android:drawable/ic_menu_crop"
            android:title="@string/menu_Aulas" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_Productos" />
    </group>

</menu>