<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuLogin"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="10"
        android:title="@string/menu_Login" />
    <item
        android:id="@+id/menuRegistro"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:orderInCategory="20"
        android:title="@string/menu_Registro"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuPrefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="30"
        android:title="@string/menu_Prefs"
        app:showAsAction="never" />
    <item
        android:id="@+id/menuSalir"
        android:icon="@android:drawable/ic_lock_power_off"
        android:orderInCategory="100"
        android:title="@string/menu_Salir"
        app:showAsAction="ifRoom" />

</menu>