<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.fragmentos.FiltroProductosFragment">

    <TextView
        android:id="@+id/tvFiltroCabecera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/colorPrimary"
        android:gravity="center_horizontal"
        android:text="@string/tv_Filtro_Cabecera"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvFiltroDptos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_Filtro_Dpto"
        app:layout_constraintEnd_toStartOf="@+id/glineFiltro1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFiltroCabecera" />

    <Spinner
        android:id="@+id/spFiltroDptos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFiltroDptos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glineFiltro1"
        app:layout_constraintTop_toTopOf="@+id/tvFiltroDptos"
        app:layout_constraintVertical_bias="0.448"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFiltroAulas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tv_Filtro_Aula"
        app:layout_constraintEnd_toStartOf="@+id/glineFiltro1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFiltroDptos" />

    <Spinner
        android:id="@+id/spFiltroAulas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvFiltroAulas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glineFiltro1"
        app:layout_constraintTop_toTopOf="@+id/tvFiltroAulas"
        app:layout_constraintVertical_bias="0.482"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/tvFiltroFecAlta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:labelFor="@id/etFiltroFecAlta"
        android:text="@string/tv_Filtro_FecAlta"
        app:layout_constraintEnd_toStartOf="@+id/glineFiltro1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFiltroAulas" />

    <EditText
        android:id="@+id/etFiltroFecAlta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFiltroFecAlta"
        app:layout_constraintEnd_toStartOf="@+id/glineFiltro2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glineFiltro1"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btFiltroFecAlta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:text="@string/bt_Filtro_FecAlta"
        app:layout_constraintBaseline_toBaselineOf="@+id/etFiltroFecAlta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glineFiltro2"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btFiltroCancelar"
        style="@style/StyleButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bt_Cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btFiltroAceptar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btFiltroAceptar"
        style="@style/StyleButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/bt_Aceptar"
        app:layout_constraintBaseline_toBaselineOf="@+id/btFiltroCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btFiltroCancelar"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glineFiltro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glineFiltro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>